src/rules/pyflakes/snapshots/ruff__pyflakes__tests__F401_F401_0.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedImport:
      - functools
      - false
      - false
  location:
    row: 2
    column: 7
  end_location:
    row: 2
    column: 16
  fix:
    content: import os
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 20
  parent: ~
- kind:
    UnusedImport:
      - collections.OrderedDict
      - false
      - false
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 15
  fix:
    content: "from collections import (\n    Counter,\n    namedtuple,\n)"
    location:
      row: 4
      column: 0
    end_location:
      row: 8
      column: 1
  parent:
    row: 4
    column: 0
- kind:
    UnusedImport:
      - logging.handlers
      - false
      - false
  location:
    row: 12
    column: 7
  end_location:
    row: 12
    column: 23
  fix:
    content: ""
    location:
      row: 12
      column: 0
    end_location:
      row: 13
      column: 0
  parent: ~
- kind:
    UnusedImport:
      - shelve
      - false
      - false
  location:
    row: 32
    column: 11
  end_location:
    row: 32
    column: 17
  fix:
    content: ""
    location:
      row: 32
      column: 0
    end_location:
      row: 33
      column: 0
  parent: ~
- kind:
    UnusedImport:
      - importlib
      - false
      - false
  location:
    row: 33
    column: 11
  end_location:
    row: 33
    column: 20
  fix:
    content: pass
    location:
      row: 33
      column: 4
    end_location:
      row: 33
      column: 20
  parent: ~
- kind:
    UnusedImport:
      - pathlib
      - false
      - false
  location:
    row: 37
    column: 11
  end_location:
    row: 37
    column: 18
  fix:
    content: ""
    location:
      row: 37
      column: 0
    end_location:
      row: 38
      column: 0
  parent: ~
- kind:
    UnusedImport:
      - pickle
      - false
      - false
  location:
    row: 52
    column: 15
  end_location:
    row: 52
    column: 21
  fix:
    content: pass
    location:
      row: 52
      column: 8
    end_location:
      row: 52
      column: 21
  parent: ~

