src/rules/pyflakes/snapshots/ruff__pyflakes__tests__F404_F404.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    LateFutureImport: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 37
  fix: ~
  parent: ~

