src/rules/pyflakes/snapshots/ruff__pyflakes__tests__F509_F50x.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    PercentFormatUnsupportedFormatCharacter: j
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 11
  fix: ~
  parent: ~

